--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
+version: '3'
 services:
-  db:
-    container_name: luxelyfe
+  store_db:
+    container_name: store_db
     image: postgres
     environment:
       POSTGRES_USER: sidof
@@ -17,7 +18,6 @@ services:
 networks:
   db:
     driver: bridge
-
 volumes:
   db:
 
